# youtube-downloader

./: .gitignore  CMakeLists.txt  README.md
src/: Window.cpp  Window.h  main.cpp
windows-installer/: setup.iss
